<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <data>
        <variable
            name="fragment"
            type="com.prateekshah.prateekshahgrowghassignment.WelcomeFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/welcome_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/welcome_img"
                android:layout_marginBottom="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/welcome_user"
                android:textColor="#1E1E1E"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_img" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/feeds_btn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button_gradient"
                android:text="@string/feeds"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/noto_sans_bold"
                android:contentDescription="@string/feeds_btn"
                android:onClick="@{() -> fragment.goToFeedsFragment()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/upload_img_btn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button_gradient"
                android:text="@string/upload_img"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/noto_sans_bold"
                android:contentDescription="@string/upload_img_btn"
                android:onClick="@{() -> fragment.goToUploadImageFragment()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feeds_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>