<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="photo"
            type="com.prateekshah.prateekshahgrowghassignment.network.ImageResponse" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/post_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:padding="2dp"
                android:src="@drawable/post_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/post_profile"
                app:layout_constraintTop_toTopOf="@id/post_profile" />

            <TextView
                android:id="@+id/profile_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:text="@string/profile_category"
                app:layout_constraintStart_toEndOf="@id/post_profile"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <TextView
                android:id="@+id/post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text2"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toBottomOf="@id/post_profile"
                app:layout_constraintStart_toStartOf="@id/post_profile" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/mars_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:paddingEnd="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:imageUrl="@{photo.downloadUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_description"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                tools:ignore="ContentDescription"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/num_comments_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_comments"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/mars_image"
                app:layout_constraintStart_toStartOf="@id/mars_image" />

            <ImageView
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"
                android:layout_marginTop="10dp"
                android:paddingBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/num_comments_text"
                app:layout_constraintStart_toStartOf="@id/num_comments_text"
                android:contentDescription="@string/like" />

            <TextView
                android:id="@+id/num_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_likes"
                android:fontFamily="@font/noto_sans"
                android:paddingBottom="30dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/like_btn"
                app:layout_constraintBottom_toBottomOf="@id/like_btn"
                app:layout_constraintStart_toEndOf="@id/like_btn"
                tools:text="9 Likes"/>

            <ImageView
                android:id="@+id/comment_btn"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/comment_icon"
                android:paddingBottom="30dp"
                android:layout_marginStart="40dp"
                app:layout_constraintTop_toTopOf="@id/like_btn"
                app:layout_constraintBottom_toBottomOf="@id/like_btn"
                app:layout_constraintStart_toEndOf="@id/num_likes"
                android:contentDescription="@string/comment" />

            <TextView
                android:id="@+id/num_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_comments"
                android:fontFamily="@font/noto_sans"
                android:paddingBottom="30dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/comment_btn"
                app:layout_constraintBottom_toBottomOf="@id/comment_btn"
                app:layout_constraintStart_toEndOf="@id/comment_btn"
                tools:text="9 Comments"/>

            <ImageView
                android:id="@+id/share_btn"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:src="@drawable/share_icon"
                android:paddingBottom="30dp"
                android:layout_marginStart="40dp"
                app:layout_constraintTop_toTopOf="@id/like_btn"
                app:layout_constraintBottom_toBottomOf="@id/like_btn"
                app:layout_constraintStart_toEndOf="@id/num_comments"
                android:contentDescription="@string/share" />

            <TextView
                android:id="@+id/share_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:fontFamily="@font/noto_sans"
                android:paddingBottom="30dp"
                android:layout_marginStart="7dp"
                app:layout_constraintTop_toTopOf="@id/share_btn"
                app:layout_constraintBottom_toBottomOf="@id/share_btn"
                app:layout_constraintStart_toEndOf="@id/share_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>