<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.prateekshah.prateekshahgrowghassignment.onboardscreens.OurVisionFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".onboardscreens.OurVisionFragment">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:fontFamily="@font/noto_sans_bold"
                android:paddingHorizontal="20dp"
                android:text="@string/skip_intro"
                android:textColor="#3A7EB0"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="@{() -> fragment.goToWelcomeFragment()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAllCaps="false" />

            <ImageView
                android:id="@+id/our_vision_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/our_vision_img"
                android:layout_marginBottom="300dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAccessibility="no" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="350dp"
                android:layout_height="330dp"
                android:layout_marginTop="45dp"
                app:layout_constraintTop_toBottomOf="@id/our_vision_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_card_view_with_gradient">

                    <TextView
                        android:id="@+id/our_vision_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/noto_sans"
                        android:paddingStart="20dp"
                        android:paddingTop="40dp"
                        android:text="@string/our_vision"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/our_vision_descr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginHorizontal="20dp"
                        android:paddingHorizontal="20dp"
                        android:fontFamily="@font/manrope_extralight"
                        android:text="@string/dummy_text"
                        android:textColor="#FFF"
                        app:layout_constraintTop_toBottomOf="@id/our_vision_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/next_btn"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/circular_button_without_arrow"
                        android:contentDescription="@string/next_btn"
                        android:gravity="center"
                        android:text="@string/ready"
                        android:textAllCaps="false"
                        android:padding="10dp"
                        android:fontFamily="@font/noto_sans_bold"
                        android:onClick="@{() -> fragment.goToWelcomeFragment()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/our_vision_descr" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="@style/CircularDeterminateProgressBar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:progress="100"
                        android:progressDrawable="@drawable/circle"
                        app:layout_constraintBottom_toBottomOf="@+id/next_btn"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/next_btn" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>